Fri Mar 23 04:29:32 GMT 2012  Olly Betts <olly@survex.com>

	* tests/perftest/perftest.cc: Fix comment cut-and-paste error.

Fri Mar 23 04:28:24 GMT 2012  Olly Betts <olly@survex.com>

	* Makefile.am: Use git commit hash in the title of a coverage report
	  generated from a git tree.

Thu Mar 22 04:29:38 GMT 2012  Olly Betts <olly@survex.com>

	* xapian-core.spec.in: Remove xapian-chert-update.

Mon Mar 19 05:42:50 GMT 2012  Olly Betts <olly@survex.com>

	* matcher/multiandpostlist.cc: Don't count unweighted subqueries of
	  MultiAndPostList for percentage calculations, as OP_FILTER maps to
	  MultiAndPostList now.  (ticket#590)
	* tests/api_percentages.cc: Regression test topercent6.

Sun Mar 18 23:24:04 GMT 2012  Dan Colish <dcolish@>

	* backends/brass/brass_databasereplicator.cc: size out buffer to the
	  incoming blocksize

Sun Mar 18 17:02:14 GMT 2012  Dan Colish <dcolish@>

	* .gitignore: ignore /.deps as well

Sun Mar 18 16:46:45 GMT 2012  Dan Colish <dcolish@>

	* .gitignore:Update gitignore for bump to libxapian-1.3

Sun Mar 18 04:37:37 GMT 2012  Olly Betts <olly@survex.com>

	* configure.ac: Set LIBRARY_VERSION_SUFFIX to -1.3.

Sun Mar 18 00:48:05 GMT 2012  Dan Colish <dcolish@gmail.com>

	* backends/brass/,common/Makefile.mk, common/compression_stream.h,
	  common/compression_stream.cc: Compress changesets in brass
	  replication. Increments the changeset version. Ticket #348

Sun Mar 18 00:39:23 GMT 2012  Dan Colish <dcolish@gmail.com>

	* tests/.gitignore,tests/soaktest/.gitignore: Add additional ignores
 	  for test artifacts

Fri Mar 16 05:23:54 GMT 2012  Olly Betts <olly@survex.com>

	* common/Makefile.mk: Missing part of previous change.

Fri Mar 16 04:59:53 GMT 2012  Olly Betts <olly@survex.com>

	* Makefile.am,m4-macros/xapian.m4: Rename libxapian to libxapian-1.3
	  and xapian.m4 to xapian-1.3.m4.

Wed Mar 14 04:58:55 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS,tests/api_unicode.cc,unicode/tclUniData.cc: Update